--- a/HaierOven/Cookbook/Views/Liukang.storyboard
+++ b/HaierOven/Cookbook/Views/Liukang.storyboard
@@ -204,6 +204,9 @@
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                     </state>
+                                                    <connections>
+                                                        <action selector="studyCookTapped:" destination="nCF-pj-vsv" eventType="touchUpInside" id="tcX-bF-WGN"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
