--- a/HaierOven/LeftMenuAlert.xib
+++ b/HaierOven/LeftMenuAlert.xib
@@ -19,7 +19,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="gGd-wB-mqb" customClass="LeftMenuAlert">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="163"/>
+            <rect key="frame" x="0.0" y="0.0" width="300" height="168"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8dr-jz-cYN">
@@ -74,7 +74,7 @@
                         <constraint firstAttribute="height" constant="40" id="Udo-Sa-Ijy"/>
                     </constraints>
                     <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="15"/>
-                    <state key="normal" title="下次再说">
+                    <state key="normal" title="直接添加烤箱">
                         <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -100,7 +100,7 @@
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="202" y="-51.5"/>
+            <point key="canvasLocation" x="202" y="-49"/>
         </view>
     </objects>
 </document>
